# ChatGZQ

./: .dockerignore  .env  .env.example  Dockerfile  README.md  _config.yml  docker-compose.yml  index.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tes.json  tsconfig.json
.github/workflows/: nextjs-pre-deploy.yml  prod_ai-chatgzq.yml
app/: layout.tsx  page.tsx
app/(pages)/: layout.tsx  page.tsx
app/(pages)/(auth)/daftar/: page.tsx
app/(pages)/(auth)/data-diri/: page.tsx
app/(pages)/chat/: page.tsx
app/(pages)/dashboard/: page.tsx
app/(pages)/menu/: page.tsx
app/(pages)/status-gizi/: page.tsx
app/api/add-measurement/: route.ts
app/api/nutrition-status/: route.ts
chatbot/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
chatbot/rag_index/: faiss_index.index  faiss_index_docs.pkl  main.py
components/: Button.tsx  Chart.tsx  Chat.tsx  Footer.tsx  Modal.tsx  Navbar.tsx
components/Dashboard/: Chart.tsx  Chat.tsx  Form.tsx  IconWrapper.tsx  Menu.tsx  Overview.tsx  StatusLabel.tsx
components/Form/: Input.tsx  Select.tsx
components/Menu/: MenuCard.tsx  MenuTags.tsx  menu.ts
components/ui/: chart.tsx
data/: L-024-BBPB.csv  L-2460-BBTB.csv  P-024-BBPB.csv  P-024-PBU.csv  P-2460-BBTB.csv  P-2460-TBU.csv
lib/: auth.ts  mongodb.ts  mongoose.ts
models/: Measurement.ts  User.ts
public/data/: L-024-BBPB.csv  L-024-PBU.csv  L-060-BBU.csv  L-2460-TBU.csv  P-024-BBTB.csv  P-024-TBU.csv  P-060-BBU.csv
types/: next-auth.d.ts
utils/: calculateAge.ts  csvParser.ts  getRecommendation.ts
(+9 files in other folders)
